--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -8,6 +8,7 @@
 @forward 'keyboard' as keyboard-*;
 @forward 'loader' as loader-*;
 @forward 'navbar' as navbar-*;
+@forward 'range' as range-*;
 @forward 'tabs' as tabs-*;
 @forward 'tooltip' as tooltip-*;
 
@@ -20,6 +21,7 @@
 @use 'indicator';
 @use 'keyboard';
 @use 'navbar';
+@use 'range';
 @use 'tabs';
 @use 'tooltip';
 
@@ -33,6 +35,7 @@
   @include indicator.styles();
   @include keyboard.styles();
   // @include navbar.styles();
+  @include range.styles();
   @include tabs.styles();
   // @include tooltip.styles();
 }
