--- a/scss/tokens/_shadow.scss
+++ b/scss/tokens/_shadow.scss
@@ -5,11 +5,12 @@
 $shadow: (
   xs: '0 1px 2px 0 var(--koi-shadow-color, rgba(0 0 0 / 0.05))',
   sm: '0 1px 3px 0 var(--koi-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--koi-shadow-color, rgb(0 0 0 / 0.1))',
-  md: '0 4px 6px -1px var(--koi-shadow-color, rgba(0 0 0 / 0.1)), 0 2px 4px -1px rgba(0 0 0 / 0.01)',
+  md:
+    '0 4px 6px -1px var(--koi-shadow-color, rgba(0 0 0 / 0.1)), 0 2px 4px -2px var(--koi-shadow-color, rgba(0 0 0 / 0.1))',
   lg:
-    '0 10px 15px -3px var(--koi-shadow-color, rgba(0 0 0 / 0.1)), 0 4px 6px -2px var(--koi-shadow-color, rgba(0 0 0 / 0.1))',
+    '0 10px 15px -3px var(--koi-shadow-color, rgba(0 0 0 / 0.1)), 0 4px 6px -4px var(--koi-shadow-color, rgba(0 0 0 / 0.1))',
   xl:
-    '0 20px 25px -5px var(--koi-shadow-color, rgba(0 0 0 / 0.1)), 0 10px 10px -5px var(--koi-shadow-color, rgba(0 0 0 / 0.1))',
+    '0 20px 25px -5px var(--koi-shadow-color, rgba(0 0 0 / 0.1)), 0 8px 10px -6px var(--koi-shadow-color, rgba(0 0 0 / 0.1))',
   2xl: '0 25px 50px -12px var(--koi-shadow-color, rgba(0 0 0 / 0.25))',
   inner: 'inset 0 2px 4px 0 var(--koi-shadow-color, rgba(0 0 0 / 0.05))',
   solid: '0 0 0 2px currentColor',
