--- a/scss/components/_progress.scss
+++ b/scss/components/_progress.scss
@@ -58,17 +58,17 @@ $height: 12px;
   background: #f44;
 }
 
-@mixin stripes {
-  background-image: linear-gradient(
-      -45deg,
-      transparent 33%,
-      rgb(0 0 0 / 0.1) 33%,
-      rgb(0 0 0 / 0.1) 66%,
-      transparent 66%
-    ),
-    linear-gradient(top, rgb(255 255 255 / 0.25), rgb(0 0 0 / 0.25)), linear-gradient(left, #09c, #f44);
-  background-size: 35px 20px, 100% 100%, 100% 100%;
-}
+// @mixin stripes {
+//   background-image: linear-gradient(
+//       -45deg,
+//       transparent 33%,
+//       rgb(0 0 0 / 0.1) 33%,
+//       rgb(0 0 0 / 0.1) 66%,
+//       transparent 66%
+//     ),
+//     linear-gradient(top, rgb(255 255 255 / 0.25), rgb(0 0 0 / 0.25)), linear-gradient(left, #09c, #f44);
+//   background-size: 35px 20px, 100% 100%, 100% 100%;
+// }
 
 @mixin reset {
   appearance: none;
@@ -78,7 +78,7 @@ $height: 12px;
   width: 100%;
 }
 
-@mixin default {
+@mixin base {
   --koi-progress-height: #{$height};
   --koi-progress-radius: #{radius(full)};
   --koi-progress-background: #{fill(cnt, 9, $alpha: 0.1)};
@@ -87,9 +87,9 @@ $height: 12px;
   border-radius: var(--koi-progress-radius);
   height: var(--koi-progress-height);
 
-  &[value] {
-    // @include progress-bar;
-  }
+  // &[value] {
+  // @include progress-bar;
+  // }
 
   &:indeterminate,
   &:not([value]) {
@@ -109,18 +109,18 @@ $height: 12px;
   }
 
   #{$class} {
-    @include default;
+    @include base;
   }
 
-  @keyframes progress-loading {
-    50% {
-      left: 107%;
-    }
-  }
+  // @keyframes progress-loading {
+  //   50% {
+  //     left: 107%;
+  //   }
+  // }
 
-  @keyframes animate-stripes {
-    100% {
-      background-position: -100px 0;
-    }
-  }
+  // @keyframes animate-stripes {
+  //   100% {
+  //     background-position: -100px 0;
+  //   }
+  // }
 }
